# Splat-RS

./: .gitignore  Cargo.toml  README.md
docs/: versioning.md
splatrs/: Cargo.toml  README.md
splatrs/examples/: tiny_ascii.ply
splatrs/src/: app.rs  camera.rs  cameras.rs  cli.rs  cpu_raster.rs  headless.rs  inspect.rs  lib.rs  loader.rs  main.rs  renderer.rs  scene.rs  shader.wgsl
